<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_from_bottom_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/secondTitle"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/setup_profile"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgProfilePicture"
                    style="@style/ProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile_placeholder" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditImage"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/bg_round_gradient"
                    android:visibility="visible"
                    app:backgroundTintMode="src_over"
                    app:icon="@drawable/ic_edit"
                    app:iconSize="17dp"
                    app:iconTint="@color/on_primary_btn_color"
                    app:rippleColor="@color/grey" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/hint_text"
                app:boxBackgroundColor="@color/edit_box_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:counterTextColor="@color/black"
                app:cursorColor="@color/hint_text"
                app:cursorErrorColor="@color/black"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/hint_text"
                app:placeholderTextColor="@color/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:gravity="top|start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:scrollHorizontally="false"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint_text"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/bio"
                android:textColorHint="@color/hint_text"
                app:boxBackgroundColor="@color/edit_box_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:counterTextColor="@color/text"
                app:cursorColor="@color/hint_text"
                app:cursorErrorColor="@color/black"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/hint_text"
                app:placeholderTextColor="@color/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:gravity="top|start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="3"
                    android:scrollHorizontally="false"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint_text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtSkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/update_skills"
                android:textColor="@color/title_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgEditSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:paddingHorizontal="2dp"
                app:chipSpacingHorizontal="12dp"
                app:chipSpacingVertical="4dp"

                app:singleLine="false" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save_changes" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragmentContainerWelcome"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/welcome_nav" />


</RelativeLayout>